2008-05-21 Jim Garlick <garlick@llnl.gov>

	* ChangeLog-1.0 : Updated to reflect trunk (1.0.32+)

	* htdocs, src/httpower.c, scripts/stonith-powerman, 
	man/powerman-devices.7, etc/*.dev, NEWS : Copied from trunk.

2006-11-16 Jim Garlick <garlick@llnl.gov>

	* ChangeLog : Start over for 2.0 branch.  Old moved to ChangeLog-1.0.

	* etc/bashfun.dev : New.

2006-11-15 Albert Chu <chu11@llnl.gov>

	* : Added autoconf/automake support globally.

	* man/powermand.1 : Renamed to powermand.8.  Adjust text appropriately.

	* man/powerman.1.in, powerman.conf.5, powerman.dev.5: Adjust SEE
	ALSO section for change in section for powermand.

	* src/parse.lex (yywrap): Add function to remove need to link to -lfl.

	* powerman.spec.in: Add man8 directory.

	* src/*.c : Load config.h appropriately.

	* src/config.h: Remove file.

	* src/powerman_options.h, src/powerman_options_genders.c,
	src/powerman.c, man/powerman.1.in: Add module support and -g support.

	* powerman.spec.in: Update with genders module.

	* : branched at 1.0.26+